--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -25,18 +25,18 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <body>
 <table cellspacing="0" cellpadding="0" class="testOverview">
 <tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">C:/Users/vijkiran/IdeaProjects/PlanitTesting</a></td><td class="numi">4</td><td class="numi">4</td><td class="numi">0</td><td class="numi">0</td><td class="numi">71.4 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em"><a href="#t1">PlanitTesting</a></td><td class="numi">4</td><td class="numi">4</td><td class="numi">0</td><td class="numi">0</td><td class="numi">71.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr id="t1"><th colspan="5">C:/Users/vijkiran/IdeaProjects/PlanitTesting &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="4">cukes.MyRunner</td><td><a href="#m1"><b>runScenario</b> (cucumber) ("Runs Cucumber Scenarios")</a></td><td class="numi">4</td><td>1641749454838</td><td class="numi">70726</td></tr><tr class="passedodd"><td><a href="#m2"><b>runScenario</b> (cucumber) ("Runs Cucumber Scenarios")</a></td><td class="numi">4</td><td>1641749454838</td><td class="numi">70726</td></tr><tr class="passedodd"><td><a href="#m3"><b>runScenario</b> (cucumber) ("Runs Cucumber Scenarios")</a></td><td class="numi">4</td><td>1641749454838</td><td class="numi">70726</td></tr><tr class="passedodd"><td><a href="#m4"><b>runScenario</b> (cucumber) ("Runs Cucumber Scenarios")</a></td><td class="numi">4</td><td>1641749454838</td><td class="numi">70726</td></tr>
+<tr id="t1"><th colspan="5">PlanitTesting &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="4">cukes.MyRunner</td><td><a href="#m1"><b>runScenario</b> (cucumber) ("Runs Cucumber Scenarios")</a></td><td class="numi">4</td><td>1642336623353</td><td class="numi">70853</td></tr><tr class="passedodd"><td><a href="#m2"><b>runScenario</b> (cucumber) ("Runs Cucumber Scenarios")</a></td><td class="numi">4</td><td>1642336623353</td><td class="numi">70853</td></tr><tr class="passedodd"><td><a href="#m3"><b>runScenario</b> (cucumber) ("Runs Cucumber Scenarios")</a></td><td class="numi">4</td><td>1642336623353</td><td class="numi">70853</td></tr><tr class="passedodd"><td><a href="#m4"><b>runScenario</b> (cucumber) ("Runs Cucumber Scenarios")</a></td><td class="numi">4</td><td>1642336623353</td><td class="numi">70853</td></tr>
 </table>
-<h1>C:/Users/vijkiran/IdeaProjects/PlanitTesting</h1>
+<h1>PlanitTesting</h1>
 <h2 id="m1">cukes.MyRunner:runScenario</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
-<tr class="param stripe"><td>&quot;Verify successful submission message displayed on contact Page&quot;</td>
+<tr class="param stripe"><td>&quot;Verify the items are added to cart successfully&quot;</td>
 <td>&quot;Optional[Contact Page]&quot;</td>
 </tr>
 </table>
@@ -44,7 +44,7 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <h2 id="m2">cukes.MyRunner:runScenario</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
-<tr class="param stripe"><td>&quot;Verify Error message for Invalid data on Contact Page&quot;</td>
+<tr class="param stripe"><td>&quot;Verify Error functionality on Contact Page&quot;</td>
 <td>&quot;Optional[Contact Page]&quot;</td>
 </tr>
 </table>
@@ -52,7 +52,7 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <h2 id="m3">cukes.MyRunner:runScenario</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
-<tr class="param stripe"><td>&quot;Verify Error functionality on Contact Page&quot;</td>
+<tr class="param stripe"><td>&quot;Verify successful submission message displayed on contact Page&quot;</td>
 <td>&quot;Optional[Contact Page]&quot;</td>
 </tr>
 </table>
@@ -60,7 +60,7 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <h2 id="m4">cukes.MyRunner:runScenario</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
-<tr class="param stripe"><td>&quot;Verify the items are added to cart successfully&quot;</td>
+<tr class="param stripe"><td>&quot;Verify Error message for Invalid data on Contact Page&quot;</td>
 <td>&quot;Optional[Contact Page]&quot;</td>
 </tr>
 </table>
